adicionado o estilo do projeto

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto FAQ - MapaDev Week</title>
-    
-    <link rel="stylesheet" href="src/estilos.css" />
+        
+    <link rel="stylesheet" href="src/css/estilos.css">
     <link rel="shortcut icon" href="src/imagens/favicon.png" type="image/x-icon">
   </head>
   <body>
     <main>
       <section class="faq">
         <img
-          src="src/imagens/ilustracao-computador.svg"
+          src="/src/imagens/ilustracao-computador.svg"
           alt="ilustração moça trabalhando no computador"
           class="ilustracao"
         />
